--- a/todo.txt
+++ b/todo.txt
@@ -26,7 +26,7 @@ Rails API
 	-wire up mark as read on post card #Julio will do.
 	-adjust posts route to return only those #Tyler will do.
 		where marked_as_read is false
-	-sort posts by timestamp before route return
+	-sort posts by timestamp before route return #DONE
 
 
 React 
