--- a/todo.txt
+++ b/todo.txt
@@ -31,6 +31,7 @@ Rails API
 	-sort posts by timestamp before route return #DONE
 	-upload profile image
 	-Only keep the last 100 posts and delete from db on "marked as read"
+	-move logic from controllers to models
 
 
 React 
