--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,9 @@ Rails API
 	-upload profile image
 	-Only keep the last 100 posts and delete from db on "marked as read"
 	-move logic from controllers to models
+	-link tweet to source
+	 	-gem install twitter-text
+	-add date/time to tweet
 
 
 React 
